--- a/public/guest/css/main_2.css
+++ b/public/guest/css/main_2.css
@@ -3767,6 +3767,51 @@ input[type=submit] {
 }
 
 
+/*******************pagination.js*******************/
+
+.simple-pagination ul {
+    margin: 0 0 20px;
+    padding: 0;
+    list-style: none;
+    text-align: center;
+}
+
+.simple-pagination li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.simple-pagination li a,
+.simple-pagination li span {
+    color: #5949b3;
+    padding: 5px 10px;
+    text-decoration: none;
+    border: 1px solid #EEE;
+    background-color: #FFF;
+    box-shadow: 0px 0px 10px 0px #EEE;
+    font-size: 15px;
+    padding: 10px 15px 10px 15px;
+    border-radius: 10px;
+}
+
+.simple-pagination .current {
+    color: #FFF;
+    background-color: #5949b3;
+    border-color: #5949b3;
+    font-size: 15px;
+    padding: 10px 15px 10px 15px;
+    border-radius: 10px;
+}
+
+.simple-pagination .prev.current,
+.simple-pagination .next.current {
+    background: #493d8d;
+}
+
+
+/*******************pagination.js*******************/
+
+
 /*  Login & Registration  Section */
 
 .log-reg-modal-wrapper .modal-body {
